# seoul-records-production-os

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  claude_code_midjourney_prompt.md  claude_code_thumbnail_v2_prompt.md  docker-compose.yml  pyproject.toml  requirements.txt  seoul_records_thumbnail_studio.html  seoul_records_thumbnail_studio_LITE.html  thumbnail_prompt_builder.py
.claude/: ai-readiness-map.html  ai-readiness-score-before.json  ai-readiness-score.json
.streamlit/: config.toml
agents/: canva_designer_agent.py  composer_agent.py  distributor_agent.py  lyricist_agent.py  producer_agent.py  qc_agent.py  video_engineer_agent.py  visual_director_agent.py
api/: snapshot.py
app/: config.py  dashboard.py  main.py  models.py  orchestrator.py  project_manager.py  state_machine.py
docs/: provider_research_matrix.md  remote_control_telegram.md  tailscale_remote_access.md  unitedmasters_distribution_package.md  v0.3.2_suno_dry_run_plan.md  v0.3.4_real_dry_run_result.md  v0.4_suno_cli_provider.md  windows_supervisor_setup.md  youtube_private_upload.md
frontend/: README.md  components.json  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
scripts/: ci_check_cleanliness.py  ci_validate_presets.py  clean_package.sh
services/: concept_suggester.py  generation_job_manager.py  job_store.py  library_labels.py  metadata_consistency_service.py  shared_mood.py  suno_auto_download.py  suno_cleanup.py  thumbnail_job_manager.py
storage/: database.py
templates/: canva_layout_template.json  (+5 more)
(+250 files in other folders)
